<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="WidgetProvider_timestamp_today">Today</string>
    <string name="WidgetProvider_timestamp_yesterday">Yesterday</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s hour ago</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s hours ago</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s minutes ago</string>
    <string name="WidgetProvider_timestamp_just_now">Just now</string>
    <string name="menu_context_remove">Remove</string>
    <string name="menu_context_reparse">Reload</string>
    <string name="preparing_to_load">Preparing to load, please wait&#8230;</string>
    <string name="store_beginning_to_load">Store is beginning to load, please wait&#8230;</string>
    <string name="start_loading">Loading&#8230;</string>
    <string name="loading_failed">Failed to load, please try again&#8230;</string>
    <string name="loading_store">Updating</string>
    <string name="error_latest_apk">No APK available in database. Is store still loading?</string>
    <string name="error_delete_store">Unable to delete store. The store is still loading.</string>
    <string name="cant_connect_to_store">Can\'t connect to store</string>
    <string name="verify_store">Verify the name of the store</string>
    <string name="menu_settings">Settings</string>
    <string name="my_stores">My stores</string>
    <string name="store_name">Store Name</string>
    <string name="store">Store</string>
    <string name="category1">Category 1</string>
    <string name="category2">Category 2</string>
    <string name="add_store">Add Store</string>
    <string name="add_store_button_below">Add a store in the button below!</string>
    <string name="version">Version:</string>
    <string name="apk_id">APK ID:</string>
    <string name="vercode">Version code:</string>
    <string name="empty_store_list">You don\'t have any stores.</string>
    <string name="new_store">Add Store</string>
    <string name="add_repo_private">Private</string>
    <string name="downloads">downloads</string>
    <string name="merge_all_stores">Merge Stores</string>
    <string name="search_for_stores">Search for Stores</string>
    <string name="download_manager">Download Manager</string>
    <string name="downloading_apps">Downloading apps</string>
    <string name="downloaded_apps">Downloaded apps</string>
    <string name="no_downloads">No downloads. Start downloading!</string>
    <string name="not_downloaded_apps">Not downloaded apps</string>
    <string name="exit">exit</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="open">Open</string>
    <string name="search_market">Search Market</string>
    <string name="comments">Comments</string>
    <string name="commentlabel">Comment app&#8230;</string>
    <string name="no_comments">No comments found. Be the first!</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="comment_see_all">See All</string>
    <string name="chkBoxSchDwn">Schedule Download</string>
    <string name="exclude_update">Ignore Update</string>
    <string name="restore_updates">Restore Updates</string>
    <string name="remove_from_excluded_updates_list">Remove from Excluded Updates list</string>
    <string name="excluded_updates">Excluded Updates</string>
    <string name="no_excluded_updates">No Excluded Updates</string>
    <string name="no_excluded_updates_selected">No Excluded Updates selected</string>
    <string name="who_downloaded_this">Who downloaded this app also downloaded:</string>
    <string name="submit">Submit</string>
    <string name="body">Body&#8230;</string>
    <string name="subject">Name</string>
    <string name="available_tab">Available</string>
    <string name="featured_tab">Featured</string>
    <string name="editors_choice">Editors\' Choice</string>
	<string name="top_apps">Top Apps</string>
    <string name="installed_tab">Installed</string>
    <string name="updates_tab">Updates</string>
    <string name="add_private_store">Add private store</string>
    <string name="add_repo_text">New Store</string>
    <string name="extended_server">Extended Store</string>
    <string name="btn_add_repo">Add store</string>
    <string name="menu_rem_repo">Remove Store</string>
    <string name="number_apks">Applications:</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="finished_download_alrt">Download Finished</string>
    <string name="finished_download_message">Download Finished</string>
    <string name="download_alrt">Downloading: </string>
    <string name="srch_hint">Name of the application</string>
    <string name="tastenotavailable">Not available</string>
    <string name="unabletoexecutecheknet">Unable to execute. Check internet status.</string>
    <string name="an_error_check_net">An error occurred. Please check your internet connection.</string>
    <string name="there_was_an_error">There was an error, please try again</string>
    <string name="opinionsuccess">Your request was successfully submitted</string>
    <string name="likes">Likes: </string>
    <string name="dislikes">Don\'t likes: </string>
    <string name="like">Like</string>
    <string name="dont_like">Don\'t like</string>
    <string name="users_like_this">users like this,</string>
    <string name="users_dont_like_this">users do not like this</string>
    <string name="by">by</string>
    <string name="on">on</string>
    <string name="postingtaste">Your request is being submitted</string>
    <string name="another_comment_is_beeing_submited">Another comment is being submitted, please wait</string>
    <string name="error_occured">An error occurred. Please try again</string>
    <string name="comment_submitted">Comment submitted successfuly</string>
    <string name="showpass">Show password</string>
    <string name="user">Username&#8230;</string>
    <string name="pass">Password&#8230;</string>
    <string name="new_account">New account</string>
    <string name="new_to_aptoide">New to Aptoide? Create a free account</string>
    <string name="forgot_passwd">Forgot password?</string>
    <string name="setcredentials">Login</string>
    <string name="login_above_or_signup">Login above or signup here:</string>
    <string name="logged_as">You are logged as:</string>
    <string name="usernotdef">User not defined</string>
    <string name="passwordnotdef">Password not defined</string>
    <string name="loggingin">Logging in&#8230;</string>
    <string name="unabletoexecute">Unable to execute</string>
    <string name="failedcredentials">Failed to login the given credentials</string>
    <string name="check_your_credentials">Error. Please check your credentials</string>
    <string name="unkown_error">Unknown Error. Try again</string>
    <string name="loading_likes">Likes loading&#8230;</string>
    <string name="inresponseto">\@</string>
    <string name="add_comment">Add comment</string>
    <string name="enterbody">Enter your review on the body section</string>
    <string name="postingcomment">Posting your comment&#8230;</string>
    <string name="commentadded">Your comment as been successfully submitted</string>
    <string name="order_popup_title1">Order applications by</string>
    <string name="order_popup_lst1">Most recent first </string>
    <string name="order_popup_lst2">Alphabetically </string>
    <string name="order_popup_lst3">Rating </string>
    <string name="order_popup_lst4">Download number </string>
    <string name="order_popup_title2">Show applications</string>
    <string name="order_popup_title3">Adult Content</string>
    <string name="are_you_adult">Are you at least 21 years old?</string>
    <string name="order_popup_catg1">By category </string>
    <string name="order_popup_catg2">All applications </string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="update_repos">Update store</string>
    <string name="update_main">The list of stores in use has been changed.\nDo you wish to update them?</string>
    <string name="email">Email</string>
    <string name="pass_confirmation">Password confirmation</string>
    <string name="setting_icon_download_rules">Icon Download Rules</string>
    <string name="setting_wifi">WiFi</string>
    <string name="setting_3g">3G</string>
    <string name="setting_4g">4G</string>
    <string name="setting_ethernet">Ethernet</string>
    <string name="setting_filters_title">Filters</string>
    <string name="setting_hwspecstitle">Hardware Specs</string>
    <string name="setting_sdk_version">SDK Version</string>
    <string name="setting_screen_size">Screen Size</string>
    <string name="setting_esgl_version">ESGL Version</string>
    <string name="setting_hwspecssum">Check your hardware specifications</string>
    <string name="setting_appfiltertitle">Filter Applications</string>
    <string name="setting_mature_filtering">Mature filtering</string>
    <string name="setting_dont_show_mature_content">Don\'t show mature content</string>
    <string name="setting_appfiltersum">Don\'t show applications not compatible with your device.</string>
    <string name="setting_schdwntitle">Scheduled Downloads</string>
    <string name="setting_schdwninstalltitle">Automatic Install</string>
    <string name="setting_schdwninstallsum">Install scheduled downloads automatically when a Wifi connection is present</string>
    <string name="setting_clear_memory">Clear memory</string>
    <string name="settings_title_bar">Settings</string>
    <string name="credentialscleared">Login cleared</string>
    <string name="credentialscleared_des">Your credentials have been unsetted</string>
    <string name="menu_update_repo">List Update</string>
    <string name="menu_update_all">Update all</string>
    <string name="menu_manage">Manage Store</string>
    <string name="menu_display_options">Display Options</string>
    <string name="menu_order">Change Order</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="adult_content">Adult Content</string>
    <string name="stores">Stores</string>
    <string name="screenshots">Screenshots</string>
    <string name="app_about">About</string>
    <string name="show_more">Show more</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="related_apps">Related Apps</string>
    <string name="recommended_apps">Recommended Apps</string>
    <string name="recommended_text">Sign in to view the best apps for you</string>
    <string name="you_need_to_login">You need to login to see recommended apps for you</string>
    <string name="you_need_to_login_toast">You need to login</string>
    <string name="no_recommended_apps">No recommended apps found.</string>
    <string name="no_recommended_toast">No recommended apps found</string>
    <string name="all_updated">All apps are up to date</string>
    <string name="clear_all">Clear all</string>
    <string name="menu_add_repo">New Store</string>
    <string name="menu_edit_repo">Edit Store</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="schDwnBtn">Schedule Download</string>
    <string name="no_sch_downloads">No scheduled downloads!</string>
    <string name="schDown_installselected">Install Selected</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="clear_dwn_title">Downloads</string>
    <string name="sign_out">Sign Out</string>
    <string name="clearcontent_title">Remove data and Configurations</string>
    <string name="clearcache_title">Clear cache</string>
    <string name="logout">Logout</string>
</resources>