<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title_bar" >

    <PreferenceCategory android:title="@string/clear_dwn_title" >
        <PreferenceScreen
            android:key="second_preferencescreen"
            android:title="@string/setting_icon_download_rules">
        <CheckBoxPreference
                android:key="wifi"
                android:defaultValue="true" 
                android:title="@string/setting_wifi" />
        <CheckBoxPreference
                android:key="3g"
                android:defaultValue="true" 
                android:title="@string/setting_3g" />
        <CheckBoxPreference
                android:key="4g"
                android:defaultValue="true" 
                android:title="@string/setting_4g" />
        <CheckBoxPreference
                android:key="ethernet"
                android:title="@string/setting_ethernet"
                android:defaultValue="true" />
    </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_filters_title" >
        <Preference
            android:key="hwspecs"
            android:summary="@string/setting_hwspecstitle"
            android:title="@string/setting_hwspecstitle" >
            </Preference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hwspecsChkBox"
            android:summary="@string/setting_appfiltersum"
            android:title="@string/setting_appfiltertitle" />
        <CheckBoxPreference
            android:key="matureChkBox"
            android:summary="@string/setting_dont_show_mature_content"
            android:title="@string/setting_mature_filtering" />
        <Preference
            android:key="showexcludedupdates"
            android:title="@string/excluded_updates" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_schdwntitle" >
        <CheckBoxPreference
            android:key="schDwnBox"
            android:summary="@string/setting_schdwninstallsum"
            android:title="@string/setting_schdwninstalltitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_clear_memory" >
        <Preference
            android:key="clearapk"
            android:title="@string/clearcontent_title" />
        <Preference
            android:key="clearcache"
            android:title="@string/clearcache_title" />
    </PreferenceCategory>


</PreferenceScreen>