<?xml version="1.0" encoding="UTF-8"?>

<ScrollView android:id="@+id/ScrollView01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:minWidth="280dip"
		android:layout_height="wrap_content">

		<LinearLayout android:orientation="vertical"
			android:background="@drawable/header" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:id="@+id/groupbtn">
				<TextView android:layout_width="fill_parent" style="@style/DialogText.Title"
					android:layout_height="wrap_content" android:text="@string/order_popup_title1"
					android:textStyle="bold" android:textColor="#a8a8a8" />
				<RadioButton android:checked="false" android:text="@string/order_popup_lst1"
					android:textColor="#a8a8a8" android:id="@+id/org_rct" />
				<RadioButton android:checked="false" android:text="@string/order_popup_lst2"
					android:textColor="#a8a8a8" android:id="@+id/org_abc" />
				<RadioButton android:checked="false" android:text="@string/order_popup_lst3"
					android:textColor="#a8a8a8" android:id="@+id/org_rat" />
				<RadioButton android:checked="false" android:text="@string/order_popup_lst4"
					android:textColor="#a8a8a8" android:id="@+id/org_dwn" />
			</RadioGroup>
		</LinearLayout>

		<LinearLayout android:id="@+id/content"
			android:orientation="vertical" android:background="@drawable/center"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<RadioGroup android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:id="@+id/groupshow">
				<TextView android:layout_width="fill_parent" style="@style/DialogText.Title"
					android:layout_height="wrap_content" android:text="@string/order_popup_title2"
					android:textStyle="bold" android:textColor="#a8a8a8" />
				<RadioButton android:checked="false" android:text="@string/order_popup_catg1"
					android:textColor="#a8a8a8" android:id="@+id/shw_ct" />
				<RadioButton android:checked="true" android:text="@string/order_popup_catg2"
					android:textColor="#a8a8a8" android:id="@+id/shw_all" />
			</RadioGroup>
		</LinearLayout>
		
		
		<LinearLayout android:orientation="horizontal"
			android:background="@drawable/footer" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		</LinearLayout>

	</LinearLayout>

</ScrollView>
	<!--
		* Copyright (C) 2009 Roberto Jacinto * roberto.jacinto@caixamagica.pt
		* * This program is free software; you can redistribute it and/or *
		modify it under the terms of the GNU General Public License * as
		published by the Free Software Foundation; either version 2 * of the
		License, or (at your option) any later version. * * This program is
		distributed in the hope that it will be useful, * but WITHOUT ANY
		WARRANTY; without even the implied warranty of * MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the * GNU General Public License
		for more details. * * You should have received a copy of the GNU
		General Public License * along with this program; if not, write to the
		Free Software * Foundation, Inc., 51 Franklin Street, Fifth Floor,
		Boston, MA 02110-1301, USA.
	-->