<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#edece9"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background_normal"
        android:orientation="vertical" >

        <!-- Remove focus from subject on create -->

        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="200"
            android:hint="@string/user"
            android:singleLine="true"
            android:textColor="#696969"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:password="true"
            android:singleLine="true"
            android:textColor="#696969"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/showpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/showpass"
            android:textColor="#696969" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <!-- <Button -->
            <!-- android:id="@+id/passShowToogle" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/showpass" /> -->

            <Button
                android:id="@+id/newAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/new_account" />

            <Button
                android:id="@+id/submitLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>