<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 rmateus.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/header_aptoide"
        android:text="@string/add_comment" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp" >

            <!-- Remove focus from subject on create -->

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/name"
                android:gravity="top"
                android:hint="@string/body"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <Button
            android:id="@+id/submitComment"
            style="@style/gray_button_style"
            android:onClick="postComment"
            android:text="@string/submit" />

</LinearLayout>