<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 rmateus.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logoutlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/header_aptoide"
        android:text="@string/logout" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/logged_as"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/logged_as"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/password"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <Button
                android:id="@+id/logout"
                style="@style/gray_button_style"
                android:layout_weight="1"
                android:onClick="logout"
                android:text="@string/sign_out" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>