<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- Remove focus from subject on create -->

        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="200"
            android:hint="@string/username"
            android:singleLine="true"
            android:textColor="#696969"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:password="true"
            android:singleLine="true"
            android:textColor="#696969"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/showpass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/show_password"
            android:textColor="#fff" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/submitLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/submit" />

            <!-- <Button -->
            <!-- android:id="@+id/passShowToogle" -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:text="@string/showpass" /> -->

            <Button
                android:id="@+id/new_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/new_account" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>