<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 rmateus.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sch_downloads_header"
        style="?attr/customHeaderTextViewBackground"
        android:text="@string/schDwnBtn" />

    <RelativeLayout
        android:id="@+id/list_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/sch_down"
        android:layout_below="@+id/sch_downloads_header"
        android:background="?attr/custom_inside_background_color" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@android:color/transparent" >
        </ListView>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/no_sch_downloads"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <Button
        android:id="@+id/sch_down"
        style="@style/gray_button_style"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/schDown_installselected" />

</RelativeLayout>