<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 rmateus.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_sdkver_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_sdk_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/sdkver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/screenSizeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_screen_size"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/screenSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/esglVerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_esgl_version"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/esglVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>